# AgriMarketWatcher

./: .bowerrc  .buildpacks  .coverage  .gitignore  .slugignore  CHANGES.md  Deploy.md  Procfile  README.md  agrinet.py  app.json  app_util.py  bower.json  dataManager.py  debug.ipynb  fcm.py  fetch_fish.py  fetcher-revised.py  fetcher.py  fire.py  flask_cors.py  importer.py  log_configuration.py  manage.py  models.py  predict.py  predict.py.bak  prune.py  pushserver.py  pushserver.py.bak  pyproject.toml  requirements.txt  reset.py  sentry_integration.py  settings_local.py  setup.cfg  setup.py  test_requirements.txt  tests.py
.github/workflows/: auto-merge.yml  ci_test.yaml  codeql-analysis.yml
agrimarketwatcher.egg-info/: PKG-INFO
data/: NDNWM_daily_valid_url_list.json  crop_records.json  fish_records.json  records.json
dataManager/: __init__.py  dataManager.py
fisheries/: __init__.py  fetch_fish.py  fish_api.py
migrations/versions/: f4ab71ad4e11_initial_database_configuration.py
scripts/: create_redis.sh  start_redis.sh
static/js/: main.js
templates/: layout.html
tests/: conftest.py  test_fetch_fish.py  test_fetcher.py  test_models.py  test_pushserver.py  tests.py
tests/data/: Daily_POSWFM_27_February_2023.xls  Norris_Deonarine_NWM_Daily_Market_Report-28_February_2023.xls
